# StructuredProgramming

./: CMakeLists.txt  README.md  Zadaca13Kolokviumski.c  Zadaca14Kolokviumski.c
Functions/: Functions.c  Functions2.c  Functions3.c  Functions4.c  Functions5.c  Functions6.c  Functions7.c  Functions8.c
ZadaciZaPrvKolok/: Zadaca11Dopolnitelni.c  Zadaca12Dopolnitelni.c  Zadaca13Dopolnitelni.c  Zadaca1Dopolnitelni.c  Zadaca2Dopolnitelni.c  Zadaca4Dopolnitelni.c  Zadaca5Dopolnitelni.c  Zadaca6Dopolnitelni.c  Zadaca7Dopolnitelni.c  Zadaca9Dopolnitelni.c
ZadaciZaPrvKolokviumCpp/: CMakeLists.txt  Vezba.cpp  Zadaca1.cpp  Zadaca10.cpp  Zadaca12.cpp  Zadaca13.cpp  Zadaca2.cpp  Zadaca4.cpp  Zadaca5.cpp  Zadaca6.cpp  Zadaca7.cpp  Zadaca8Kolokviumski.cpp  Zadaca9.cpp  Zadaca9Kolokviumski.cpp  ZadacaRandom.cpp
ZadaciZaVtorKolokviumCpp/: Zadaca-1.cpp  Zadaca-2.cpp  Zadaca-3.cpp  Zadaca-4.cpp  Zadaca-5.cpp  Zadaca10Dopolnitelni.cpp  Zadaca11Kolokviumski.cpp  Zadaca12Dopolnitelni.cpp  Zadaca12Kolokviumski.cpp  Zadaca13Kolokviumski.cpp  Zadaca14Kolokviumski.cpp  Zadaca16Kolokviumski.cpp  Zadaca18Kolokviumski.cpp  Zadaca1Dopolnitelni.cpp  Zadaca1Kolokviumski.cpp  Zadaca2Dopolnitelni.cpp  Zadaca2Kolokviumski.cpp  Zadaca3Dopolnitelni.cpp  Zadaca4Dopolnitelni.cpp  Zadaca4Kolokviumski.cpp  Zadaca5Kolokviumski.cpp  Zadaca6Dopolnitelni.cpp  Zadaca6Kolokviumski.cpp  Zadaca7Dopolnitelni.cpp  Zadaca7Kolokviumski.cpp
