cmake_minimum_required(VERSION 3.23)
project(StrukturnoProgramiranje C)

set(CMAKE_C_STANDARD 23)

add_executable(StrukturnoProgramiranje Functions/Functions.c)
add_executable(StrukturnoProgramiranje1 Functions/Functions2.c)
add_executable(StrukturnoProgramiranje2 Functions/Functions3.c)
add_executable(StrukturnoProgramiranje3 Functions/Functions4.c)
add_executable(StrukturnoProgramiranje4 Functions/Functions5.c)
add_executable(StrukturnoProgramiranje5 Functions/Functions6.c)
add_executable(StrukturnoProgramiranje6 Functions/Functions7.c)
add_executable(StrukturnoProgramiranje7 Functions/Functions8.c)
add_executable(StrukturnoProgramiranje12 Zadaca13Kolokviumski.c)
add_executable(StrukturnoProgramiranje13 Zadaca14Kolokviumski.c)
add_executable(ZadaciZaPrvKolok1 ZadaciZaPrvKolok/Zadaca2Dopolnitelni.c)
add_executable(ZadaciZaPrvKolok2 ZadaciZaPrvKolok/Zadaca1Dopolnitelni.c)
add_executable(ZadaciZaPrvKolok3 ZadaciZaPrvKolok/Zadaca4Dopolnitelni.c)
add_executable(ZadaciZaPrvKolok4 ZadaciZaPrvKolok/Zadaca5Dopolnitelni.c)
add_executable(ZadaciZaPrvKolok5 ZadaciZaPrvKolok/Zadaca6Dopolnitelni.c)
add_executable(ZadaciZaPrvKolok6 ZadaciZaPrvKolok/Zadaca7Dopolnitelni.c)
add_executable(ZadaciZaPrvKolok7 ZadaciZaPrvKolok/Zadaca9Dopolnitelni.c)
add_executable(ZadaciZaPrvKolok8 ZadaciZaPrvKolok/Zadaca11Dopolnitelni.c)
add_executable(ZadaciZaPrvKolok9 ZadaciZaPrvKolok/Zadaca12Dopolnitelni.c)
add_executable(ZadaciZaPrvKolok10 ZadaciZaPrvKolok/Zadaca13Dopolnitelni.c)