cmake_minimum_required(VERSION 3.23)
project(StrukturnoProgramiranje)

set(CMAKE_CXX_STANDARD 23)

add_executable(StrukturnoProgramiranjeCpp Zadaca1.cpp)
add_executable(StrukturnoProgramiranjeCpp1 Zadaca5.cpp)
add_executable(StrukturnoProgramiranjeCpp2 Zadaca6.cpp)
add_executable(StrukturnoProgramiranjeCpp3 Zadaca9.cpp)
add_executable(StrukturnoProgramiranjeCpp4 Zadaca4.cpp)
add_executable(StrukturnoProgramiranjeCpp5 Zadaca13.cpp)
add_executable(StrukturnoProgramiranjeCpp6 Zadaca12.cpp)
add_executable(StrukturnoProgramiranjeCpp7 Zadaca7.cpp)
add_executable(StrukturnoProgramiranjeCpp8 Zadaca10.cpp)
add_executable(StrukturnoProgramiranjeCpp9 Zadaca2.cpp)
add_executable(StrukturnoProgramiranjeCpp10 ZadacaRandom.cpp)
add_executable(StrukturnoProgramiranjeCpp11 ../ZadaciZaVtorKolokviumCpp/Zadaca-1.cpp)
add_executable(StrukturnoProgramiranjeCpp12 ../ZadaciZaVtorKolokviumCpp/Zadaca-2.cpp)
add_executable(StrukturnoProgramiranjeCpp13 ../ZadaciZaVtorKolokviumCpp/Zadaca-3.cpp)
add_executable(StrukturnoProgramiranjeCpp14 ../ZadaciZaVtorKolokviumCpp/Zadaca-4.cpp)
add_executable(StrukturnoProgramiranjeCpp15 ../ZadaciZaVtorKolokviumCpp/Zadaca-5.cpp)
add_executable(StrukturnoProgramiranjeCpp16 ../ZadaciZaVtorKolokviumCpp/Zadaca1Kolokviumski.cpp)
add_executable(StrukturnoProgramiranjeCpp17 ../ZadaciZaVtorKolokviumCpp/Zadaca2Kolokviumski.cpp)
add_executable(StrukturnoProgramiranjeCpp18 ../ZadaciZaVtorKolokviumCpp/Zadaca4Kolokviumski.cpp)
add_executable(StrukturnoProgramiranjeCpp19 ../ZadaciZaVtorKolokviumCpp/Zadaca5Kolokviumski.cpp)
add_executable(StrukturnoProgramiranjeCpp20 ../ZadaciZaVtorKolokviumCpp/Zadaca6Kolokviumski.cpp)
add_executable(StrukturnoProgramiranjeCpp21 ../ZadaciZaVtorKolokviumCpp/Zadaca7Kolokviumski.cpp)
add_executable(StrukturnoProgramiranjeCpp22 ../ZadaciZaVtorKolokviumCpp/Zadaca12Kolokviumski.cpp)
add_executable(StrukturnoProgramiranjeCpp23 ../ZadaciZaVtorKolokviumCpp/Zadaca13Kolokviumski.cpp)
add_executable(StrukturnoProgramiranjeCpp24 ../ZadaciZaVtorKolokviumCpp/Zadaca16Kolokviumski.cpp)
add_executable(StrukturnoProgramiranjeCpp25 ../ZadaciZaVtorKolokviumCpp/Zadaca1Dopolnitelni.cpp)
add_executable(StrukturnoProgramiranjeCpp26 ../ZadaciZaVtorKolokviumCpp/Zadaca2Dopolnitelni.cpp)
add_executable(StrukturnoProgramiranjeCpp27 ../ZadaciZaVtorKolokviumCpp/Zadaca3Dopolnitelni.cpp)
add_executable(StrukturnoProgramiranjeCpp28 ../ZadaciZaVtorKolokviumCpp/Zadaca4Dopolnitelni.cpp)
add_executable(StrukturnoProgramiranjeCpp29 ../ZadaciZaVtorKolokviumCpp/Zadaca6Dopolnitelni.cpp)
add_executable(StrukturnoProgramiranjeCpp30 ../ZadaciZaVtorKolokviumCpp/Zadaca7Dopolnitelni.cpp)
add_executable(StrukturnoProgramiranjeCpp31 ../ZadaciZaVtorKolokviumCpp/Zadaca10Dopolnitelni.cpp)
add_executable(StrukturnoProgramiranjeCpp32 ../ZadaciZaVtorKolokviumCpp/Zadaca12Dopolnitelni.cpp)
add_executable(StrukturnoProgramiranjeCpp33 ../ZadaciZaVtorKolokviumCpp ../ZadaciZaVtorKolokviumCpp/Zadaca18Kolokviumski.cpp)
add_executable(StrukturnoProgramiranjeCpp34 Zadaca8Kolokviumski.cpp)
add_executable(StrukturnoProgramiranjeCpp35 Zadaca9Kolokviumski.cpp)
add_executable(StrukturnoProgramiranjeCpp36 ../ZadaciZaVtorKolokviumCpp/Zadaca14Kolokviumski.cpp)
add_executable(StrukturnoProgramiranjeCpp37 ../ZadaciZaVtorKolokviumCpp/Zadaca11Kolokviumski.cpp)